// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fixed should render default slot correctly 1`] = `
<div class="fx-fixed">
  <!--fixed start-->
  <div class="fx-fixed_inner placement--bottom" style="z-index: 1;">
    <div class="fx-fixed_content-wrapper" style="position: relative;">Fixed<object style="display: block; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; padding: 0px; margin: 0px; opacity: 0; z-index: -1000; pointer-events: none; visibility: hidden;" tabindex="-1" type="text/html" aria-hidden="true" data="about:blank"></object></div>
  </div>
  <!--fixed end-->
</div>
`;

exports[`Fixed should render prop background="#ffffff" correctly 1`] = `
<div class="fx-fixed">
  <!--fixed start-->
  <div class="fx-fixed_inner placement--bottom" style="background: rgb(255, 255, 255); z-index: 1;">
    <div class="fx-fixed_content-wrapper" style="position: relative;">Fixed<object style="display: block; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; padding: 0px; margin: 0px; opacity: 0; z-index: -1000; pointer-events: none; visibility: hidden;" tabindex="-1" type="text/html" aria-hidden="true" data="about:blank"></object></div>
  </div>
  <!--fixed end-->
</div>
`;

exports[`Fixed should render prop placement="top" correctly 1`] = `
<div class="fx-fixed">
  <!--fixed start-->
  <div class="fx-fixed_inner placement--top" style="z-index: 1;">
    <div class="fx-fixed_content-wrapper" style="position: relative;">Fixed<object style="display: block; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; padding: 0px; margin: 0px; opacity: 0; z-index: -1000; pointer-events: none; visibility: hidden;" tabindex="-1" type="text/html" aria-hidden="true" data="about:blank"></object></div>
  </div>
  <!--fixed end-->
</div>
`;

exports[`Fixed should render prop spaceHold=true correctly 1`] = `
<div class="fx-fixed">
  <!--fixed start-->
  <div class="fx-fixed_inner placement--bottom" style="z-index: 1;">
    <div class="fx-fixed_content-wrapper" style="position: relative;">Fixed<object style="display: block; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; padding: 0px; margin: 0px; opacity: 0; z-index: -1000; pointer-events: none; visibility: hidden;" tabindex="-1" type="text/html" aria-hidden="true" data="about:blank"></object></div>
  </div>
  <!--fixed end-->
</div>
`;
